# raffle-app

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: admin.py  tickets.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/components/: LanguageToggle.jsx
frontend/src/lib/: auth.js
frontend/src/locales/: en.json  pt.json
frontend/src/pages/: Admin.jsx  AdminLogin.jsx
